# CAPPY

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/: CAPPY.md
commands/: evidence.md  investigate.md  pattern.md  triage.md
databases/: cappy-cache_sample.json  schema.md
docs/: AGENT_REFERENCE.md  ARCHITECTURE.md  SKILL_REFERENCE.md  TOOL_REFERENCE.md
docs/cookbooks/: 00-getting-started.md  01-foundations.md  02-orchestrator.md  03-security.md  04-provider.md  05-mcp.md  06-workflow.md  07-reference.md  08-wiring.md
skills/investigate/: QUICK_REFERENCE.md  SKILL.md
skills/investigate/sub-skills/: curator.md  escalation.md  gate.md  initialize.md  logging.md  recon.md  sherlock.md  synthesis.md  validate.md
src/: Cargo.toml  lib.rs
templates/: inv_context_template.json
templates/deliverables/: GUIDELINES.md  customer_response.txt
templates/first-response/: content-pack.txt  index.json  integration-error.txt  performance.txt  playbook-error.txt  ui-frontend.txt
